# Programming-technology

./: README.md
.github/workflows/: main.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h
task2/C/: main.cpp  main_test.cpp  main_test.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task5/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp
task5/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
task_2/: CMakeLists.txt
task_2/A/: preparing.py
task_2/B/: lib.cpp
task_2/C/: main.h
